--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                    'Shots On Traget: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
 			
 			
-			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><br><a href='https://bet32.github.io/live/  '>  CLICK HERE TO CHECK ANOTHER MATCH </a><br><p> <a href=' https://youtu.be/-cgBaMj4Oe8'> CLICK HERE TO WATCH OUR BET ODDS FOR TODAY </a>  <br> <p>"  + result;
+			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><br> <a href=' https://youtu.be/-cgBaMj4Oe8'> CLICK HERE TO WATCH OUR BET ODDS FOR TODAY </a>  <br> <p>"  + result;
 
 			
 		
@@ -133,7 +133,7 @@
 	
 <p> <br> <p> <br> <p> <br> <p>
 
-<p>   <b><a href='https://oak29.github.io/smart/ '> CLICK HERE TO DOWNLOAD OUR APP FOR ANDROID AND iOS </a></b></p>
+
 
 
  <p>   <b><a href='https://t.me/+nTqW1z9iYf43NmU0 '> CLICK HERE TO JOIN OUR UK TELEGRAM BET GROUP </a></b></p>
