--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                    'Shots On Traget: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
 			
 			
-			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><br> <a href=' https://youtu.be/-cgBaMj4Oe8'> CLICK HERE TO WATCH OUR BET ODDS FOR TODAY </a>  <br> <p>"  + result;
+			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><br> <a href=' https://youtu.be/-cgBaMj4Oe8'> CLICK HERE TO WATCH HOW TO USE THE BET ROBOT CORRECTLY  </a>  <br> <p>"  + result;
 
 			
 		
