--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                    'Shots On Traget: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
 			
 			
-			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href=' https://bet32.github.io/live/  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://youtu.be/2WmCSuekNJs '> CLICK HERE TO WATCH AND GET BOOKING CODE FOR TODAY  </a>  <br> <p>"  + result;
+			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href=' https://bet32.github.io/live/  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://youtu.be/j0EdkyOEDFc '> CLICK HERE TO WATCH AND GET BOOKING CODE FOR TODAY  </a>  <br> <p>"  + result;
 
 			
 		
