--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
     </style>
 </head>
 <body>
-<p>
+<marquee behavior="scroll" direction="left">
+ <B> <a href=' https://youtu.be/j0EdkyOEDFc  '> CLICK HERE TO WATCH THE COUNTRIES YOU SHOULD SELECT YOUR TEAMS FROM TODAY  </a> </B>
+  
+  
+</marquee>
 
-
-<p>
+	
     <h1>Enter Two Teams Playing And Get Bet Odds</h1>
 
     <label for="team1">Enter Team 1:</label>
