--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
 <marquee behavior="scroll" direction="left">
- <B> <a href=' https://youtu.be/j0EdkyOEDFc  '> CLICK HERE TO WATCH THE COUNTRIES YOU SHOULD SELECT YOUR TEAMS FOR TODAY  </a> </B>
+ <B> <a href=' https://youtu.be/j0EdkyOEDFc  '> CLICK HERE TO WATCH THE COUNTRIES YOU SHOULD SELECT YOUR TEAMS FROM , FOR TODAY  </a> </B>
   
   
 </marquee>
