--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 return;
             }
 
-            var outcomes = ["HOME OR AWAY", " OVER 1.5", "OVER 7.5 CORNERS", ];
+            var outcomes = ["HOME OR AWAY", " OVER 1.5", "1ST HALF UNDER 2.5", ];
             var randomIndex = Math.floor(Math.random() * outcomes.length);
             var suggestedOutcome = outcomes[randomIndex];
 			 var Team1 = Math.floor(Math.random() * 17) + 1;
