--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			
 			 var result = 
                    'Shots Attempt: ' + team1 + ' ' + Team1 + ' - ' + Team2 + ' ' + team2 + '<br>' +
-                   'Shots On Traget: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
+                   'Shots On Target: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
 			
 			
 			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href=' https://bet32.github.io/live/  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://youtu.be/j0EdkyOEDFc '> CLICK HERE TO WATCH OUR BOOKING CODE FOR TODAY  </a>  <br> <p>"  + result;
