--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 return;
             }
 
-            var outcomes = ["HOME OR AWAY", " OVER 1.5", "1ST HALF UNDER 2.5", ];
+            var outcomes = ["HOME OR AWAY", " OVER 1.5", " UNDER 4.5", ];
             var randomIndex = Math.floor(Math.random() * outcomes.length);
             var suggestedOutcome = outcomes[randomIndex];
 			 var Team1 = Math.floor(Math.random() * 17) + 1;
@@ -117,7 +117,7 @@
                    'Shots On Target: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
 			
 			
-			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href=' https://bet32.github.io/live2/  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://youtu.be/j0EdkyOEDFc '> CLICK HERE TO WATCH OUR BOOKING CODE   </a>  <br> <p>"  + result;
+			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href=' https://chat.whatsapp.com/BrQCEU4mQvuErSMCBcyrRN  '> CLICK HERE TO GET BOOKING CODE  </a>  <br><p> <a href='https://chat.whatsapp.com/BrQCEU4mQvuErSMCBcyrRN '> CLICK HERE TO GET 20 BET ODDS   </a>  <br> <p>"  + result;
 
 			
 		
