--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
    <p><b><a href='https://bet546.github.io/ai/ '>CLICK HERE TO FOR BET ODDS</a></b></p>
 	
 	
-    <button onclick="goToWebsite('https://www.amazon.com/gp/product/B0CY7LFZL8 ')">WATCH HOW MBAPPE EX GIRLFRIEND<br> HAS CURSED HIM FROM SCORING GOALS<br> BECAUSE OF CHEATING  </button>
+    <button onclick="goToWebsite('https://www.youtube.com/watch?v=QG3YI-o2OYs ')">WATCH HOW MBAPPE EX GIRLFRIEND<br> HAS CURSED HIM FROM SCORING GOALS<br> BECAUSE OF CHEATING  </button>
    
  
 
