--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
    <p><b><a href='https://bet546.github.io/ai/ '>CLICK HERE TO FOR BET ODDS</a></b></p>
 	
 	
-    <button onclick="goToWebsite('https://www.youtube.com/watch?v=QG3YI-o2OYs ')">CLICK HERE TO <br>WATCH HOW MBAPPE<br> EX GIRLFRIEND CURSED HIM<br> WITH WITCH CRAFT<br> BECAUSE OF CHEATING  </button>
+    <button onclick="goToWebsite('https://www.youtube.com/watch?v=QG3YI-o2OYs ')">CLICK HERE TO <br>WATCH HOW MBAPPE<br> GIRLFRIEND CURSED HIM<br> WITH WITCH CRAFT<br> BECAUSE OF CHEATING  </button>
    
  
 
