--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
   <div class="container">
     <B>WELCOME TO BET ROBOT PREDICTIONS </B>
-   <p><b><a href='https://bet546.github.io/ai/ '>CLICK HERE TO FOR BET ODDS</a></b></p>
+   <p><b><a href='https://bet546.github.io/ai/ '>CLICK HERE FOR BET ODDS</a></b></p>
 	
 	
  
