--- a/index.html
+++ b/index.html
@@ -1,179 +1,91 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9617191770288474"
+     crossorigin="anonymous"></script>
 	 
 	 <meta name="google-adsense-account" content="ca-pub-9617191770288474">
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BET A.I</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 1px;
-            background-color: green; 
-        }
 
-        h1 {
-            color: #FFFFFF; /* White */
-        }
 
-        label {
-            display: block;
-            margin: 10px 0;
-            color: #FFFFFF; /* White */
-        }
-
-        input {
-            padding: 8px;
-            margin-bottom: 10px;
-            width: 200px;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #4CAF50; /* Green */
-            color: #FFFFFF; /* White */
-            border: none;
-            cursor: pointer;
-        }
-
-        button:disabled {
-            background-color: #555; /* Grey */
-            cursor: not-allowed;
-        }
-
-        h2 {
-            margin-top: 20px;
-            color: #FFFFFF; /* White */
-        }
-		
-		 footer {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TESTIMONY</title>
+  <style>
+    body {
+      background-color: yellow; /* Set background color to white */
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+	  
+	
+	  
+	  
+	  
+    }
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      text-align: center;
+      display: flex;
+      flex-direction: column; /* Align items vertically */
+      align-items: center; /* Center items horizontally */
+    }
+    button {
+      padding: 10px 150px; /* Adjusted padding */
+      font-size: 20px; /* Increased font size */
+      margin: 10px;
+      cursor: pointer;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+      white-space: nowrap; /* Prevent text wrapping */
+      overflow: hidden; /* Hide overflow text */
+      text-overflow: ellipsis; /* Show ellipsis (...) for overflow text */
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    footer {
       background-color: black;
       color: white;
       padding: 20px;
       text-align: center;
     }
-		
-    </style>
+	
+	
+
+  .blog-title {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+  }
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+  </style>
 </head>
 <body>
-<marquee behavior="scroll" direction="left">
- <B> <a href=' https://www.youtube.com/watch?v=QG3YI-o2OYs  '> CLICK HERE TO WATCH THE LATEST FOOTBALL NEWS  </a> </B>
-  
-  
-</marquee>
-
-	
-    <h1>Enter Two Teams Playing And Get Bet Odds</h1>
-
-    <label for="team1">Enter Team 1:</label>
-    <input type="text" id="team1" placeholder="Team 1">
-
-    <br>
-
-    <label for="team2">Enter Team 2:</label>
-    <input type="text" id="team2" placeholder="Team 2">
-
-    <br>
-
-    <button onclick="suggestOutcome()">ROBOT BET ODDS</button>
-
-    <br>
-
-    <B id="result"></B>
-
-    <script>
-	
-	
-	
-
-        function suggestOutcome() {
-	
-		
-		
-		
-            var team1 = document.getElementById("team1").value;
-            var team2 = document.getElementById("team2").value;
-
-            if (team1.trim() === "" || team2.trim() === "") {
-                alert("Please enter both teams");
-                return;
-            }
-
-            var outcomes = ["HOME OR AWAY", " OVER 1.5", " UNDER 4.5", ];
-            var randomIndex = Math.floor(Math.random() * outcomes.length);
-            var suggestedOutcome = outcomes[randomIndex];
-			 var Team1 = Math.floor(Math.random() * 17) + 1;
-			 var Team2 = Math.floor(Math.random() * 13) + 1;
-			 var shotsOnTargetTeam1 = Math.floor(Math.random() * 5);
-			 var shotsOnTargetTeam2 = Math.floor(Math.random() * 4);
-
-			
-			 var result = 
-                   'Shots Attempt: ' + team1 + ' ' + Team1 + ' - ' + Team2 + ' ' + team2 + '<br>' +
-                   'Shots On Target: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
-			
-			
-			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href='https://youtu.be/Ece-Utac89c  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://chat.whatsapp.com/FplAhsrOKExK28R5vq5xNq '> CLICK HERE FOR OUR BET ODDS   </a>  <br> <p>"  + result;
-
-			
-		
-
-            // Disable the button after it is clicked
-            document.querySelector('button').disabled = true;
-        }
-		
-		
-		
-		
-		
-		
-    </script>
-	
-<p> <br> <p> <br> <p> <br> <p>
-
-
-
-
-
-
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	  <footer>
+  <div class="container">
     
+   <p><b> SUBSCRIBE AND SHARE YOUR OPINION ON EPL AND LA-LIGA MATCHES<BR> WE WILL PAY YOU 50 DOLLARS EVERY MONTH <BR> FOR SHARING YOUR IDEAS ON THE MATCHES THAT WE WILL POST </b></p>
+   
+	<p><b><a href='https://c2hxh289.caspio.com/dp/1adbd0004430347a2a4547a29b70 '>CLICK HERE TO REGISTER AND SUBSCRIBE  </a></b></p>   </p>
 	
-	<p>EMAIL:      newsandgame2021@gmail.com</p>
-    <p>SERVICE:    FOOTBALL ARTIFICIAL INTELLIGENCE </p>
-    <p>ABOUT US:   BET-ROBOT  IS AN ONLINE TECHNOLOGY COMPANY  <br>THAT BUILDS FOOTBALL ARTIFICIAL INTELLIGENCE</p>
-  </footer>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+  
 </body>
 </html>
