--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TESTIMONY</title>
+  <title>FOOTBALL</title>
   <style>
     body {
       background-color: yellow; /* Set background color to white */
