--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 <body>
   <div class="container">
     
-   <p><b> SUBSCRIBE AND SHARE YOUR OPINION ON EPL AND LA-LIGA MATCHES<BR> WE WILL PAY YOU $50 DOLLARS EVERY MONTH <BR> FOR SHARING YOUR IDEAS ON THE MATCHES THAT WE WILL POST </b></p>
+   <p><b> PREDICT 4 TEAMS THAT WILL WIN THEIR MATCHES<BR>OUR BET PLAYERS WILL STAKE BET WITH YOUR PREDICTION <BR>IF YOUR PREDICTION COMES TRUE WE PAY YOU $10 </b></p>
    
-	<p><b><a href='https://c2hxh289.caspio.com/dp/1adbd0002dcaf539a1f14efa93f6 '>CLICK HERE TO REGISTER AND SUBSCRIBE  </a></b></p>   </p>
+	<p><b><a href='https://c2hxh289.caspio.com/dp/1adbd0002dcaf539a1f14efa93f6 '>CLICK HERE TO REGISTER AND SUBSCRIBE <br>TO BECOME PART   </a></b></p>   </p>
 	
   
 </body>
