--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <div class="container">
     
-   <p><b> SHARE YOUR OPINION ON TOP MATCHES<BR>OUR IN EUROPE AND ON OUR FOOTBALL DEBATE <BR>WE WILL PAY YOU $50 AT THE END OF THE MONTH<BR> FOR POSTING AND COMMENTING ON OUR CHANNEL</b></p>
+   <p><b> SHARE YOUR OPINION ON TOP MATCHES<BR> IN EUROPE AND ON OUR FOOTBALL DEBATE <BR>WE WILL PAY YOU $50 AT THE END OF THE MONTH<BR> FOR POSTING AND COMMENTING ON OUR CHANNEL</b></p>
    
 	<p><b><a href='https://c2hxh289.caspio.com/dp/1adbd0002dcaf539a1f14efa93f6 '>CLICK HERE TO REGISTER AND SUBSCRIBE   </a></b></p>   </p>
 	
