--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                    'Shots On Target: ' + team1 + ' ' + shotsOnTargetTeam1 + ' - ' + shotsOnTargetTeam2 + ' ' + team2;
 			
 			
-			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href='https://bet32.github.io/live3/  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://www.youtube.com/watch?v=QG3YI-o2OYs '> CLICK HERE FOR OUR BET ODDS   </a>  <br> <p>"  + result;
+			document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + "<br><p> <a href='https://chat.whatsapp.com/EQWq4QF37cN6ueXx8VwoAo
+  '> CLICK HERE TO CHECK ANOTHER MATCH  </a>  <br><p> <a href='https://www.youtube.com/watch?v=QG3YI-o2OYs '> CLICK HERE FOR OUR BET ODDS   </a>  <br> <p>"  + result;
 
 			
 		
