--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,9 +113,8 @@
 		
 		
         document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + 
-            "<br><p><a href='https://chat.whatsapp.com/DznKEOoQzy2KgaZBCvirBT  '> CLICK HERE FOR FREE BET ODDS</a><br>" +
-            "<p><a href='https://chat.whatsapp.com/DznKEOoQzy2KgaZBCvirBT
- '> CLICK HERE FOR OUR BOOKING CODE </a><br>" +
+            "<br><p><a href=' https://chat.whatsapp.com/DznKEOoQzy2KgaZBCvirBT '> CLICK HERE FOR FREE BET ODDS</a><br>" +
+            "<p><a href='https://chat.whatsapp.com/DznKEOoQzy2KgaZBCvirBT '> CLICK HERE FOR OUR BOOKING CODE </a><br>" +
 
 			  "<br> LINE UPS<br><p>" + 
 			result;
