--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 <marquee behavior="scroll" direction="left">
-    <B><a href=' https://youtu.be/j0EdkyOEDFc '> CLICK HERE TO WATCH THE COUNTRIES YOU SHOULD SELECT YOUR TEAMS FROM , FOR TODAY   </a></B>
+    <B><a href=' https://t.me/+4wIVuAzZbYVmYWNk '> CLICK HERE FOR OUR BET ODDS TODAY   </a></B>
 </marquee>
 
 <h1>Enter Two Teams Playing And Get Bet Odds</h1>
@@ -113,10 +113,10 @@
 		
 		
         document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + 
-            "<br><p><a href=' https://chat.whatsapp.com/JFMshBy03qXL73cyZOKDI2 '> CLICK HERE FOR FREE BET ODDS</a><br>" +
-            "<p><a href='https://chat.whatsapp.com/JFMshBy03qXL73cyZOKDI2 '> CLICK HERE FOR OUR BOOKING CODE </a><br>" +
+            "<br><p><a href=' https://bet32.github.io/live/ '> CLICK HERE TO CHECK ANOTHER MATCH</a><br>" +
+            "<p><a href='https://t.me/+4wIVuAzZbYVmYWNk '> CLICK HERE FOR OUR BET ODDS </a><br>" +
 
-			  "<br> LINE UPS<br><p>" + 
+			  "<br> LINE UPS COMING UP <br><p>" + 
 			result;
 
 		
