--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 <marquee behavior="scroll" direction="left">
-    <B><a href=' https://t.me/+4wIVuAzZbYVmYWNk '> CLICK HERE FOR OUR BET ODDS TODAY   </a></B>
+    <B><a href=' https://www.youtube.com/channel/UC_qZl6QcJeCuD5aJY0m96EA '> CLICK HERE TO SUBSCRIBE AND GET BET ODDS EVERYDAY   </a></B>
 </marquee>
 
 <h1>Enter Two Teams Playing And Get Bet Odds</h1>
@@ -113,8 +113,8 @@
 		
 		
         document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + 
-            "<br><p><a href=' https://bet32.github.io/live/ '> CLICK HERE TO CHECK ANOTHER MATCH</a><br>" +
-            "<p><a href='https://t.me/+4wIVuAzZbYVmYWNk '> CLICK HERE FOR OUR BET ODDS </a><br>" +
+            "<br><p><a href=' https://www.youtube.com/channel/UC_qZl6QcJeCuD5aJY0m96EA '> CLICK HERE TO SUBSCRIBE AND WATCH OUR ODDS</a><br>" +
+            "<p><a href='https://www.youtube.com/channel/UC_qZl6QcJeCuD5aJY0m96EA '> CLICK HERE TO SUBSCRIBE AND GET OUR ODDS </a><br>" +
 
 			  "<br> LINE UPS COMING UP <br><p>" + 
 			result;
