--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 <marquee behavior="scroll" direction="left">
-    <B><a href=' https://youtu.be/_pBepHmH0S4 '> CLICK HERE TO WATCH OUR BET ODDS FOR TODAY   </a></B>
+    <B><a href=' https://www.youtube.com/channel/UC_qZl6QcJeCuD5aJY0m96EA  '> CLICK HERE TO SUBSCRIBE TO OUR YOUTUBE FOR FIXED GAMES   </a></B>
 </marquee>
 
 <h1>Enter Two Teams Playing And Get Bet Odds</h1>
@@ -114,7 +114,7 @@
 		
         document.getElementById("result").innerHTML = "BET ODDS: " + suggestedOutcome + 
             "<br><p><a href=' https://bet32.github.io/live/ '> CLICK HERE TO CHECK ANOTHER MATCH </a><br>" +
-            "<p><a href='https://youtu.be/_pBepHmH0S4 '> CLICK HERE TO WATCH OUR BET ODDS FOR TODAY </a><br>" +
+            "<p><a href='https://www.youtube.com/channel/UC_qZl6QcJeCuD5aJY0m96EA '> CLICK HERE TO SUBSCRIBE TO OUR YOUTUBE FOR FIXED GAMES </a><br>" +
 
 			  "<br> LINE UPS COMING UP <br><p>" + 
 			result;
