--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Alpha Abacus Training</title>
     <style>
         body {
+			   background-color:red ;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
@@ -174,7 +175,7 @@
             padding: 40px 20px;
         }
         .about-section, .courses-section, .benefits-section, .testimonials-section, .gallery-section, .contact-section {
-            background-color: #f4f4f4;
+            background-color: ;
             color: #333;
         }
         .section h2 {
@@ -189,7 +190,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #333;
+            background-color: black;
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -212,6 +213,18 @@
             cursor: pointer;
             border-radius: 5px;
         }
+		
+		
+		
+		
+	
+		
+		
+		
+		
+		
+		
+		
     </style>
     <script>
         function showMainWebsite() {
@@ -238,6 +251,35 @@
             </ul>
         </nav>
         <h1>Welcome to Alpha Abacus</h1>
+		
+		
+		<p>
+   
+   <b><a href=' https://krampah.com/women.html '>WOMEN FASHION STYLES   </a></b>
+   <p>
+   
+    <b><a href=' https://krampah.com/men.html '>MEN FASHION STYLES   </a></b>
+	<p>
+   
+      <b><a href=' https://krampah.com/men.html '>WOMEN KENTE BRIDE STYLES   </a></b>
+	  <p>
+
+      <b><a href=' https://krampah.com/men.html '> FASHION STYLE FOR COUPLE   </a></b>
+
+ 
+   
+	</p>
+  
+ 
+  
+
+		
+		
+		
+		
+		
+		
+		
         <p class="subtitle">Unlock Your Potential with Every Calculation</p>
         <div class="advertisement-bar">
             <div class="moving-text">Thank you for being a part of Alpha Abacus</div>
