--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Abacus Training</title>
+    <title>KRAMPAH.COM</title>
     <style>
         body {
-			   background-color:red ;
+			   background-color:yellow ;
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
