--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <style>
     body {
       background-color: black; /* Set background color to white */
+	  background-image: url('https://cdna.lystit.com/520/650/n/photos/footlocker/f1cd9fcb/nike-Black-Air-Max-Schoenen.jpeg     ');
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
